# roc-py

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
app/: auth.py  exceptions.py  main.py  settings.py  utils.py
app/api/: router.py
app/api/routers/: application.py  auth.py  buildings.py  favorites.py  payment_methods.py  personal_information.py  preferences.py  rooms.py  stripe.py  subscriptions.py  users.py  veriff.py  zones.py
app/api/schemas/: __init__.py  application.py  auth.py  buildings.py  favorites.py  payment_method.py  personal_information.py  preferences.py  rooms.py  stripe.py  subscriptions.py  user.py  veriff.py  zones.py
app/database/: __init__.py  base.py  engine.py  session.py
app/database/models/: __init__.py  apartment.py  application.py  building.py  payment_method.py  personal_information.py  personality.py  plan.py  preferences.py  room.py  school.py  stripe.py  subscription.py  user.py  veriff.py  zone.py
app/database/tables/: __init__.py  apartments.py  favorites.py  preferences.py
app/integrations/: __init__.py  twilio.py
app/services/: __init__.py  auth.py  buildings.py  favorites.py  jwt.py  preferences.py  rooms.py  stripe.py  users.py  veriff.py  verification.py
