[tool.poetry]
name = "roc-api"
version = "0.1.0"
description = "ROC API"
authors = ["Adan Sanchez <adan@roc.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
SQLAlchemy = "^2.0.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.4.2"
stripe = "^6.7.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
geoalchemy2 = "^0.14.1"
psycopg2-binary = "^2.9.9"
twilio = "^8.10.3"
shapely = "^2.0.2"
pydantic = {extras = ["email"], version = "^2.5.3"}
multidict = ">=5.0.0,<6.0.0"  # Cambiar la versión de multidict

[tool.poetry.group.dev.dependencies]
boto3-stubs = {extras = ["essential"], version = "^1.28.67"}
types-stripe = "^3.5.2.15"
doppler-env = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"